fixed some bugs

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    <h1 class="welcome-title">Welcome to my Calculator</h1>
-
+    <div></div>
     <div class="calculator-box">
         <div class="output-bar">
             <input class="output-data" id="output-data">
@@ -38,6 +37,9 @@
                 <button class="input-button" value="/" id="/">/</button>
                 <button class="input-button" value="*" id="*">*</button>
                 <button class="input-button" value="%" id="%">%</button>
+            </div>
+            <div class="fifth-row">
+                <button class="input-button" value="0"  id="0">0</button>
             </div>
         </div>
     </div>
