--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div></div>
     <div class="calculator-box">
         <div class="output-bar">
-            <input class="output-data" id="output-data">
+            <input class="output-data" id="output-data"> Test
         </div>
         <div class="input-buttons">
             <div class="first-row">
